# django-setup

./: .env.dev  .env.prod  README.md  docker-compose.prod.yml  docker-compose.yml
app/: Dockerfile  Dockerfile.prod  db.sqlite3  pyproject.toml
app/example/: settings.py
nginx/: nginx.conf
