[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Sergey <kapustin.sergey@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
django = "3.2.6"
psycopg2-binary = "^2.9.3"
gunicorn = "20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
